[package]
name = "visiting_ref"
version = "0.1.0"
authors = ["Theodore Cipicchio <okready@users.noreply.github.com>"]
edition = "2018"
description = "Container types that asynchronously return ownership of a value to another context upon exiting scope"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/visiting_ref"
homepage = "https://github.com/okready/visiting_ref"
repository = "https://github.com/okready/visiting_ref"
readme = "README.md"
categories = ["asynchronous", "data-structures", "memory-management", "no-std", "rust-patterns"]
keywords = ["async", "borrow", "lifetime", "owned"]

[badges]
travis-ci = { repository = "okready/visiting_ref" }

[dependencies]
futures-channel = { version = "0.3", default-features = false, features = ["alloc"] }
futures-core = { version = "0.3", default-features = false }

[dev-dependencies]
futures-executor = "0.3"
futures-util = "0.3"
tokio = { version = "0.2", features = ["rt-threaded"] }
